Add inspector, throttled state.
I put state back in with this commit, partly because I'd ironed out the
other bugs. Unfortunately, it still interacts badly with prop function
children. However, I went ahead and shipped it because I've discovered
that you can throttle the state change update on one side, and memoize
the child items on the other, and that keeps the call stack from getting
too big.

This doesn't stop rerenders, unfortunately. You'll want to only grab the
bits of state you want and leave the rest alone in production.

--- a/src/combobox.module.css
+++ b/src/combobox.module.css
@@ -1,12 +1,20 @@
 .launcher {
   background-color: #000;
   border: 1px solid #fff;
-  width: min(72ch, 90vw);
+  position: relative;
 }
 
 .command {
   display: grid;
   grid-area-template: 'label' 1fr 'controls' 2fr;
+}
+
+.overlay {
+  left: -50%;
+  top: 50%;
+  margin: 0 auto;
+  transform: translate3d(50%, 15%, 0);
+  width: 100%;
 }
 
 .command label {
